--- a/donofy/templates/allauth/base.html
+++ b/donofy/templates/allauth/base.html
@@ -15,8 +15,8 @@
 
     {% block corecss %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=League+Spartan:wght@200,400,800&display=swap">
-        <link rel="stylesheet" href="#">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=League+Spartan&display=swap">
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_css %}
@@ -51,5 +51,6 @@
     {% block postloadjs %}
     {% endblock %}
 
+    
   </body>
 </html>
