--- a/donofy/home/templates/home/index.html
+++ b/donofy/home/templates/home/index.html
@@ -2,5 +2,12 @@
 {% load static %}
 
 {% block content %}
-<h1 class="display-4 text-success">Donofy home!</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <h3 class="text-heavy text-pink tag-line mt-5">Spreading affordable support,<br>to your causes, your way.</h3>
+                <p class="quote">“Alone we can do so little; together we can do so much.” <strong>- Helen Keller</strong></p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
