--- a/donofy/static/css/base.css
+++ b/donofy/static/css/base.css
@@ -5,8 +5,8 @@ html {
 }
 
 body {
-    background-color: #f6f6f6;
-    height: calc(100vh - 500px);
+    background: url('/media/hero-img.jpg') no-repeat center center fixed;
+    height: calc(100vh - 64px);
     color: #222;
     font-family: 'League Spartan', Arial, Helvetica, sans-serif;
     font-weight: 400;
@@ -90,8 +90,6 @@ body {
 
 /* NAV-BARS */
 
-
-
 .main-logo {
     margin: 0;
     padding: 0;
@@ -100,8 +98,9 @@ body {
 }
 
 .navbar-nav .nav-link {
-    padding-right: 0;
-    padding-left: 0;
+    margin-top: 0.5rem;
+    padding-right: 0.75rem;
+    padding-left: 0.75rem;
     text-align-last: right;
 }
 
@@ -120,4 +119,8 @@ body {
 .dropdown-item:active,
 .dropdown-item:focus {
     color: #582E8E;
+}
+
+.header-container {
+    padding-top: 64px;
 }
