--- a/donofy/templates/base.html
+++ b/donofy/templates/base.html
@@ -40,9 +40,11 @@
         <a class="col-8 col-md-4 my-auto main-logo nav-link" href="{% url 'home' %}">
           <img class="main-logo" src="../media/donofy-full-logo.svg" alt="">
         </a>
+        <!-- DROPDOWN TOGGLE FOR SMALLER SCREENS -->
         <button class="navbar-toggler btn btn-lg icon-pink p-0 m-0" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span><i class="fa-solid fa-bars burger-menu"></i></span>
         </button>
+        <!-- NAVIGATION LINKS -->
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
