--- a/donofy/home/static/home/css/home.css
+++ b/donofy/home/static/home/css/home.css
@@ -1,5 +1,23 @@
+/* .hero-container {
+    position: relative;
+    width: 100vw;
+} */
+
 #hero-img {
-    padding: 0;
+    position: relative;
+    object-fit: contain;
     margin: 0;
-    height: 50vh;
+    padding: 0;
+    top: 64px;
+    width: 100vw;
+    height: auto;
+}
+
+#hero-text {
+    position: absolute;
+    background-color: rgba(205, 37, 118, 0.7);
+    margin: 0.75rem 0.75rem 0 0;
+    padding: 0.75rem;
+    top: 64px;
+    left: 0px;
 }
