--- a/donofy/home/templates/home/index.html
+++ b/donofy/home/templates/home/index.html
@@ -5,24 +5,15 @@
     <link rel="stylesheet" href="{% static 'home/css/home.css' %}">
 {% endblock %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
-{% endblock %}
+
 
 {% block content %}
-    <div class="container-fluid">
-        <div class="row">
-        </div>
-    </div>
-    <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-12 col-md-6">
-                <h3 class="text-heavy text-pink tag-line mt-5">Spreading affordable support,<br>to your causes, your way.</h3>
-                <p class="quote">“Alone we can do so little; together we can do so much.” <strong>- Helen Keller</strong></p>
+    <div class="container-fluid p-0 m-0">
+        <div class="hero-container row p-0 m-0">
+            <img id="hero-img" class="col-12" src="../media/hero-img.jpg" center no-repeat>
+            <div id="hero-text" class="col-12 col-md-12 rounded">
+                <h3 class="text-heavy text-white text-pink tag-line">Spreading affordable support,<br>to your causes, your way.</h3>
+                <p class="text-white">“Alone we can do so little; together we can do so much.” - Helen Keller</p>
             </div>
         </div>
     </div>
