--- a/donofy/templates/base.html
+++ b/donofy/templates/base.html
@@ -55,7 +55,7 @@
             </li>
             <li class="nav-item dropdown text-pink text-heavy">
               <a class="nav-link text-pink text-heavy" href="#" id="user-options"role="button" data-toggle="dropdown" aria-expanded="false">
-                My Account <i class="fa fa-chevron-down text-pink text-heavy" aria-hidden="true"></i>
+                My Account <i class="fa fa-chevron-down text-pink icon-link text-heavy" aria-hidden="true"></i>
               </a>
               <div class="dropdown-menu dropdown-menu-right text-pink text-heavy" aria-labelledby="user-options">
                 {% if request.user.is_authenticated %}
