--- a/donofy/home/templates/home/index.html
+++ b/donofy/home/templates/home/index.html
@@ -9,12 +9,34 @@
 
 {% block content %}
     <div class="container-fluid p-0 m-0">
-        <div class="hero-container row p-0 m-0">
+        <div class="row p-0 m-0">
             <img id="hero-img" class="col-12" src="../media/hero-img.jpg" center no-repeat>
-            <div id="hero-text" class="col-12 col-md-12 rounded">
-                <h3 class="text-heavy text-white text-pink tag-line">Spreading affordable support,<br>to your causes, your way.</h3>
-                <p class="text-white">“Alone we can do so little; together we can do so much.” - Helen Keller</p>
+            <div id="hero-text" class="col-12 d-none d-sm-block">
+                <h1 class="text-heavy text-white pb-5">Spreading affordable support,<br>to your causes, your way.</h1>
+                <h3 class="col-12 d-none d-lg-block text-white p-0">“Alone we can do so little; together we can do so much.” - Helen Keller</h3>
+                <p class="col-12 d-none d-lg-block text-white p-0">
+                    These words are at the core of what we do. We want to encourage anybody and everybody<br> 
+                    to donate as a much or as little as they like to causes and charities they care about.
+                </p>
+                {% if request.user.is_authenticated %}
+                {% else %}
+                    <a class="d-none d-lg-block col-md-3 col-lg-4 btn btn-lg btn-white" href="#">Sign up / Login</a>
+                {% endif %}
             </div>
+            <div id="hero-text-xs" class="col-12 d-block d-sm-none rounded">
+                <h2 class="text-heavy text-white">Spreading affordable support,<br>to your causes, your way.</h2>
+            </div>
+        </div>
+        <div id="hero-text-under" class="row col-12 d-lg-none p-0 m-0">
+            {% if request.user.is_authenticated %}
+            {% else %}
+                <a class="col-7 d-lg-none btn btn-lg btn-pink mx-auto" href="#">Sign up / Login</a>
+            {% endif %}
+            <h3 class="d-lg-none text-center text-pink">“Alone we can do so little; together we can do so much.” - Helen Keller</h3>
+            <p class="d-lg-none text-center text-dark">
+                These words are at the core of what we do. We want to encourage anybody and everybody 
+                to donate as a much or as little as they like to causes and charities they care about.
+            </p>
         </div>
     </div>
 {% endblock %}
