--- a/donofy/templates/base.html
+++ b/donofy/templates/base.html
@@ -48,7 +48,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link text-pink text-heavy" href="#">Charities</a>
+              <a class="nav-link text-pink text-heavy" href="{% url 'charities' %}">Charities</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-pink text-heavy" href="#">FAQs</a>
