chore: fixes media folder location and base link to site logo

--- a/donofy/templates/base.html
+++ b/donofy/templates/base.html
@@ -38,7 +38,7 @@
       <nav class="navbar navbar-expand-md bg-light pr-4">
         <!-- LOGO -->
         <a class="col-8 col-md-4 my-auto main-logo nav-link" href="{% url 'home' %}">
-          <img class="main-logo" src="../media/donofy-full-logo.svg" alt="Donofy logo">
+          <img class="main-logo" src="{% static 'media/donofy-full-logo.svg' %}" alt="Donofy logo">
         </a>
         <!-- DROPDOWN TOGGLE FOR SMALLER SCREENS -->
         <button class="navbar-toggler btn btn-lg icon-pink p-0 m-0" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
