add: html snippet for search bar on charities page

--- a/donofy/charities/templates/charities/charities.html
+++ b/donofy/charities/templates/charities/charities.html
@@ -6,7 +6,8 @@
 {% endblock %}
 
 {% block content %}
-    <div id="div1">
-        <p>Hello</p>
+    {% include 'charities/includes/search-filters.html' %}
+    <div id="div1" class="container-fluid main-content">
+        <p class="text-pink">Hello</p>
     </div>
 {% endblock %}
