--- a/donofy/home/templates/home/index.html
+++ b/donofy/home/templates/home/index.html
@@ -10,7 +10,7 @@
 {% block content %}
     <div class="container-fluid p-0 m-0">
         <div class="row p-0 m-0">
-            <img id="hero-img" class="col-12" src="../media/hero-img.jpg" center no-repeat>
+            <img id="hero-img" class="col-12" src="../static/media/hero-img.jpg" center no-repeat>
             <div id="hero-text" class="col-12 d-none d-sm-block">
                 <h1 class="text-heavy text-white pb-5">Spreading affordable support,<br>to your causes, your way.</h1>
                 <h3 class="col-12 d-none d-lg-block text-white p-0">“Alone we can do so little; together we can do so much.” - Helen Keller</h3>
