--- a/donofy/home/static/home/css/home.css
+++ b/donofy/home/static/home/css/home.css
@@ -17,18 +17,19 @@
     left: 0px;
 }
 
-#hero-text p {
-    font-size: 1.25rem;
+p {
+    font-size: 1.2rem;
 }
 
-#hero-text-sm h2 {
+#hero-text-sm {
+    margin-bottom: 3rem;
+}
+
+#hero-text-sm h2,
+.power-together h2 {
     font-size: 2rem;
     margin-top: 5.65rem;
     margin-bottom: 2.75rem;
-}
-
-#hero-text-sm p {
-    font-size: 1.25rem;
 }
 
 #hero-img-sm {
@@ -40,12 +41,41 @@
     height: auto;
 }
 
-@media (max-width: 575px) {
-    #hero-text-sm h2,
-    #hero-text-sm h3 {
+p.power-figure {
+    font-size: 3rem;
+    font-weight: 900;
+    line-height: 1;
+}
+
+p.power-text {
+    font-size: 2rem;
+    font-weight: 400;
+    line-height: 1;
+}
+
+
+@media screens and (min-width: 320px) and (max-width: 575px) {
+    h2, h3 {
         font-size: 1.5rem;
     }
-    #hero-text-sm p {
-        font-size: 1.2rem;
+}
+
+@media (max-width: 991px) {
+    .power-together h2 {
+        margin-top: 1rem;
+    }
+    i.icon-lg {
+        font-size: 3rem;
+    }
+    p.power-figure {
+        font-size: 2.5rem;
+        font-weight: 900;
+        line-height: 1;
+    }
+    
+    p.power-text {
+        font-size: 1.5rem;
+        font-weight: 400;
+        line-height: 1;
     }
 }
