--- a/donofy/templates/base.html
+++ b/donofy/templates/base.html
@@ -48,25 +48,25 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link text-pink text-heavy" href="{% url 'charities' %}">Charities</a>
+              <a class="nav-link text-pink bold" href="{% url 'charities' %}">Charities</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-pink text-heavy" href="#">FAQs</a>
+              <a class="nav-link text-pink bold" href="#">FAQs</a>
             </li>
-            <li class="nav-item dropdown text-pink text-heavy">
-              <a class="nav-link text-pink text-heavy" href="#" id="user-options"role="button" data-toggle="dropdown" aria-expanded="false">
-                My Account <i class="fa fa-chevron-down text-pink icon-link text-heavy" aria-hidden="true"></i>
+            <li class="nav-item dropdown text-pink bold">
+              <a class="nav-link text-pink bold" href="#" id="user-options"role="button" data-toggle="dropdown" aria-expanded="false">
+                My Account <i class="fa fa-chevron-down text-pink icon-link bold" aria-hidden="true"></i>
               </a>
-              <div class="dropdown-menu dropdown-menu-right text-pink text-heavy" aria-labelledby="user-options">
+              <div class="dropdown-menu dropdown-menu-right text-pink bold" aria-labelledby="user-options">
                 {% if request.user.is_authenticated %}
                   {% if request.user.is_superuser %}
-                    <a href="#" class="dropdown-item text-pink text-heavy">Product Management</a>
+                    <a href="#" class="dropdown-item text-pink bold">Product Management</a>
                   {% endif %}
-                  <a href="#" class="dropdown-item text-pink text-heavy">My Profile</a>
-                  <a href="{% url 'account_logout' %}" class="dropdown-item text-pink text-heavy">Logout</a>
+                  <a href="#" class="dropdown-item text-pink bold">My Profile</a>
+                  <a href="{% url 'account_logout' %}" class="dropdown-item text-pink bold">Logout</a>
                 {% else %}
-                  <a href="{% url 'account_signup' %}" class="dropdown-item text-pink text-heavy">Register</a>
-                  <a href="{% url 'account_login' %}" class="dropdown-item text-pink text-heavy">Login</a>
+                  <a href="{% url 'account_signup' %}" class="dropdown-item text-pink bold">Register</a>
+                  <a href="{% url 'account_login' %}" class="dropdown-item text-pink bold">Login</a>
                 {% endif %}
               </div>
             </li>
