--- a/donofy/templates/base.html
+++ b/donofy/templates/base.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <header class="container-fluid fixed-top m-0 p-0">
-      <nav class="navbar navbar-expand-md bg-light mr-2">
+      <nav class="navbar navbar-expand-md bg-light pr-2">
         <!-- LOGO -->
         <a class="col-8 col-md-4 my-auto main-logo nav-link" href="{% url 'home' %}">
           <img class="main-logo" src="{% static 'media/donofy-full-logo.svg' %}" alt="Donofy logo">
@@ -84,6 +84,20 @@
 
     {% block content %}
     {% endblock %}
+
+    <footer class="container-fluid m-0 p-0">
+      <div class="row">
+        <div class="col-12 footer-box">
+          <div class="mt-5 ml-5">
+            <img class="footer-logo" src="{% static 'media/donofy-icon-logo.svg' %}" alt="Donofy logo">
+            <h4 class="footer-logo-text bold text-dark d-inline">Donofy</h4>
+          </div>
+          <div class="ml-5">
+            <p class="text-dark">Copyright Claire Fisher 2024</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     {% block postloadjs %}
     {% endblock %}
