--- a/donofy/home/templates/home/index.html
+++ b/donofy/home/templates/home/index.html
@@ -22,7 +22,7 @@
                 </p>
                 {% if request.user.is_authenticated %}
                 {% else %}
-                    <a class="d-none d-lg-block col-md-3 col-lg-4 btn btn-lg btn-white mb-3" href="#">Sign up / Login</a>
+                    <a class="d-none d-lg-block col-md-3 col-lg-4 btn btn-lg btn-white mb-3" href="{% url 'account_login' %}">Sign up / Login</a>
                 {% endif %}
             </div>
         </div>
@@ -31,7 +31,7 @@
             <h2 class="col-12 bold text-pink mx-auto">Spreading affordable support, to your causes, your way.</h2>
             {% if request.user.is_authenticated %}
             {% else %}
-                <a class="col-10 col-sm-6 btn btn-lg btn-pink mb-5" href="#">Sign up / Login</a>
+                <a class="col-10 col-sm-6 btn btn-lg btn-pink mb-5" href="{% url 'account_login' %}">Sign up / Login</a>
             {% endif %}
             <h3 class="col-12 text-center text-pink">“Alone we can do so little; together we can do so much.”<br>- Helen Keller</h3>
             <p class="text-center text-dark px-3">
@@ -72,13 +72,13 @@
             <div class="col-12 col-md-4 col-xl-3 text-center">
                 <div class="card stat-card mb-2">
                     {% if request.user.is_authenticated %}
-                    <a href="" class="card-body stat-card card-white text-center">
+                    <a href="" class="card-body card-white text-center">
                         <div><i class="card-icon icon-lg icon-pink fa-solid fa-magnifying-glass"></i></div>
                         <h3 class="bold">Find your charities</h3>
-                        <p class="card-white">Find charities that matter to you and add them to your Donofy favourites</p>
+                        <p>Find charities that matter to you and add them to your Donofy favourites</p>
                     </a>
                     {% else %}
-                    <a href="" class="card-body stat-card card-white text-center">
+                    <a href="{% url 'account_login' %}" class="card-body card-white stat-card text-center">
                         <div><i class="card-icon icon-lg icon-pink fa-solid fa-magnifying-glass"></i></div>
                         <h3 class="bold">Find your charities</h3>
                         <p>Find charities that matter to you and add them to your Donofy favourites</p>
@@ -87,21 +87,37 @@
                 </div>
             </div>
             <div class="col-12 col-md-4 col-xl-3 text-center">
-                <div class="card card-white stat-card mb-2">
-                    <div class="card-body text-center">
+                <div class="card stat-card mb-2">
+                    {% if request.user.is_authenticated %}
+                    <a href="#" class="card-body card-white text-center">
                         <div><i class="card-icon icon-lg icon-pink fa-solid fa-gear"></i></div>
                         <h3 class="bold">Set a donation amount</h3>
                         <p>Choose how much you want to donate to each of your charities</p>
-                    </div>
+                    </a>
+                    {% else %}
+                    <a href="{% url 'account_login' %}" class="card-body card-white stat-card text-center">
+                        <div><i class="card-icon icon-lg icon-pink fa-solid fa-gear"></i></div>
+                        <h3 class="bold">Set a donation amount</h3>
+                        <p>Choose how much you want to donate to each of your charities</p>
+                    </a>
+                    {% endif %}
                 </div>
             </div>
             <div class="col-12 col-md-4 col-xl-3 text-center">
-                <div class="card card-white stat-card mb-2">
-                    <div class="card-body text-center">
+                <div class="card stat-card mb-2">
+                    {% if request.user.is_authenticated %}
+                    <a href="#" class="card-body card-white text-center">
                         <div><i class="card-icon icon-lg icon-pink fa-solid fa-chart-line"></i></div>
                         <h3 id="impact-header" class="bold">Make an impact</h3>
                         <p>Track the impact your financial support has made</p>
-                    </div>
+                    </a>
+                    {% else %}
+                    <a href="{% url 'account_login' %}" class="card-body card-white stat-card text-center">
+                        <div><i class="card-icon icon-lg icon-pink fa-solid fa-chart-line"></i></div>
+                        <h3 id="impact-header" class="bold">Make an impact</h3>
+                        <p>Track the impact your financial support has made</p>
+                    </a>
+                    {% endif %}
                 </div>
             </div>
         </div>
