chore: minor style edits

--- a/donofy/home/templates/home/index.html
+++ b/donofy/home/templates/home/index.html
@@ -44,18 +44,18 @@
             <h2 class="col-12 text-dark bold text-center mb-1">The power of together</h2>
             <p class="col-12 text-dark text-center mb-4">Below are just some of the numbers powered by Donofy supporters</p>
         </div>
-        <div class="row bg-light-brand justify-content-center">
-            <div class="dono-stat col-12 col-md-4 col-xl-3 text-center">
+        <div class="row bg-light-brand justify-content-center mb-5">
+            <div class="col-12 col-md-4 col-xl-3 text-center p-0">
                 <i class="icon-lg icon-pink fa-solid fa-users"></i>
                 <p class="text-dark power-figure">22,000</p>
                 <p class="text-dark power-text">Supporters</p>
             </div>
-            <div class="dono-stat col-12 col-md-4 col-xl-3 text-center">
+            <div class="col-12 col-md-4 col-xl-3 text-center p-0">
                 <i class="icon-lg icon-pink fa-solid fa-gift"></i>
                 <p class="text-dark power-figure">£598,000</p>
                 <p class="text-dark power-text">Raised</p>
             </div>
-            <div class="dono-stat col-12 col-md-4 col-xl-3 text-center">
+            <div class="col-12 col-md-4 col-xl-3 text-center p-0">
                 <i class="icon-lg icon-pink fa-solid fa-heart"></i>
                 <p class="text-dark power-figure">1,504</p>
                 <p class="text-dark power-text">Charities</p>
