--- a/donofy/static/css/base.css
+++ b/donofy/static/css/base.css
@@ -10,7 +10,7 @@ html {
 
 body {
     padding: 0;
-    margin: 0;
+    margin-top: 64px;
     height: calc(100vh - 64px);
     color: #222;
     background-color: #f6f6f6;
@@ -148,8 +148,9 @@ i.icon-lg {
 
 .navbar-nav .nav-link {
     margin-top: 0.5rem;
-    padding-right: 0.75rem;
-    padding-left: 0.75rem;
+    padding: 0;
+    /* padding-right: 0.75rem;
+    padding-left: 0.75rem; */
     text-align-last: right;
 }
 
