add: frontend to login page (+ installed CrispyForms)

--- a/donofy/home/templates/home/index.html
+++ b/donofy/home/templates/home/index.html
@@ -44,7 +44,7 @@
             <h2 class="col-12 text-dark bold text-center mb-1">The power of together</h2>
             <p class="col-12 text-dark text-center mb-4">Below are just some of the numbers powered by Donofy supporters</p>
         </div>
-        <div class="row bg-light-brand justify-content-center mb-5">
+        <div class="row bg-light-brand justify-content-center pb-5 m-0">
             <div class="col-12 col-md-4 col-xl-3 text-center p-0">
                 <i class="icon-lg icon-pink fa-solid fa-users"></i>
                 <p class="text-dark power-figure">22,000</p>
@@ -68,7 +68,7 @@
                 <p class="text-dark text-center">Getting started with Donofy couldn't be easier!</p>
             </div>
         </div>
-        <div class="row bg-pink-light justify-content-center pb-4 mx-auto">
+        <div class="row bg-pink-light justify-content-center pb-4 mx-auto mb-5">
             <div class="col-12 col-md-4 col-xl-3 text-center">
                 <div class="card stat-card mb-2">
                     {% if request.user.is_authenticated %}
