--- a/donofy/templates/base.html
+++ b/donofy/templates/base.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <header class="container-fluid fixed-top m-0 p-0">
-      <nav class="navbar navbar-expand-md bg-light">
+      <nav class="navbar navbar-expand-md bg-light-brand">
         <!-- LOGO -->
         <a class="col-8 col-md-4 my-auto main-logo nav-link" href="{% url 'home' %}">
           <img class="main-logo" src="{% static 'media/donofy-full-logo.svg' %}" alt="Donofy logo">
