add: frontend styles to sign in page

--- a/donofy/static/css/accounts.css
+++ b/donofy/static/css/accounts.css
@@ -10,3 +10,9 @@
     width: 205px;
     border: 1px solid #CD2576;
 }
+
+@media (max-width: 575px) {
+    h1.text-pink {
+        font-size: 2rem;
+    }
+}
