add: frontend styles to logout page

--- a/donofy/templates/allauth/account/logout.html
+++ b/donofy/templates/allauth/account/logout.html
@@ -4,18 +4,23 @@
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Out" %}</h1>
+{% block inner_content %}
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+  <div class="row">
+    <div class="col-12">
+      <h1 class="text-pink bold">{% trans "Sign Out" %}</h1>
+      <p>{% trans 'Are you sure you want to sign out?' %}</p>
+    </div>
+  </div>
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
-
+  <form method="post" action="{% url 'account_logout' %}">
+    {% csrf_token %}
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+    {% endif %}
+    <button type="submit" class="primaryAction btn btn-lg btn-pink my-4">{% trans 'Sign Out' %}</button>
+  </form>
+</div>
 
 {% endblock %}
