--- a/donofy/templates/allauth/account/account_inactive.html
+++ b/donofy/templates/allauth/account/account_inactive.html
@@ -4,8 +4,14 @@
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Account Inactive" %}</h1>
+{% block inner_content %}
+    <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="text-pink bold">{% trans "Account Inactive" %}</h1>
+                <p>{% trans "This account is inactive." %}</p>
+            </div>
+        </div>
+    </div>
 
-<p>{% trans "This account is inactive." %}</p>
 {% endblock %}
