--- a/donofy/templates/allauth/account/password_change.html
+++ b/donofy/templates/allauth/account/password_change.html
@@ -4,13 +4,19 @@
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
+{% block inner_content %}
+    <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="text-pink bold">{% trans "Change Password" %}</h1>
+            </div>
+        </div>
+        <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button class="primaryAction btn btn-lg btn-pink my-4" type="submit" name="action">{% trans "Change Password" %}</button>
+            <a class="d-block button secondaryAction btn-lg btn-white" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+        </form>
+    </div>
+    
 {% endblock %}
