--- a/donofy/templates/allauth/account/password_reset.html
+++ b/donofy/templates/allauth/account/password_reset.html
@@ -5,20 +5,23 @@
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
+    <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="text-pink bold">{% trans "Password Reset" %}</h1>
+                {% if user.is_authenticated %}
+                {% include "account/snippets/already_logged_in.html" %}
+                {% endif %}
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-
-    <p>{% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}</p>
-
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
-
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+                <p>{% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}</p>                
+            </div>
+        </div>
+        <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <input type="submit" class="primaryAction btn btn-lg btn-pink my-4" value="{% trans 'Reset My Password' %}" />
+        </form>
+        <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    </div>
 {% endblock %}
