--- a/donofy/templates/allauth/account/password_reset_from_key.html
+++ b/donofy/templates/allauth/account/password_reset_from_key.html
@@ -3,17 +3,24 @@
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+{% block inner_content %}
+    <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="text-pink bold">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
 
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        <form method="POST" action="{{ action_url }}" class="password_reset_from_key">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" name="action" value="{% trans 'change password' %}"/>
-        </form>
-    {% endif %}
+                {% if token_fail %}
+                    {% url 'account_reset_password' as passwd_reset_url %}
+                    <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}" class="a-pink">new password reset</a>.{% endblocktrans %}</p>
+            </div>
+            {% else %}
+            <form method="POST" action="{{ action_url }}" class="password_reset_from_key">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <input type="submit" name="action" value="{% trans 'change password' %}"/>
+            </form>
+            {% endif %}
+        </div>
+    </div>
+
 {% endblock %}
