--- a/donofy/templates/allauth/account/password_reset_from_key_done.html
+++ b/donofy/templates/allauth/account/password_reset_from_key_done.html
@@ -3,7 +3,15 @@
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+{% block inner_content %}
+
+    <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="text-pink bold">{% trans "Change Password" %}</h1>
+                <p>{% trans 'Your password is now changed.' %}</p>
+            </div>
+        </div>
+    </div>
+    
 {% endblock %}
