--- a/donofy/templates/allauth/account/password_set.html
+++ b/donofy/templates/allauth/account/password_set.html
@@ -4,12 +4,17 @@
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Set Password" %}</h1>
-
+{% block inner_content %}
+    <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="text-pink bold">{% trans "Set Password" %}</h1>
+            </div>
+        </div>
+    </div>
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
     </form>
 {% endblock %}
