--- a/donofy/templates/allauth/account/signup_closed.html
+++ b/donofy/templates/allauth/account/signup_closed.html
@@ -4,8 +4,13 @@
 
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
-
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+{% block inner_content %}
+<div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+    <div class="row">
+        <div class="col-12">
+            <h1 class="text-pink bold">{% trans "Sign Up Closed" %}</h1>
+            <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+        </div>
+    </div>
+</div>
 {% endblock %}
