--- a/donofy/templates/allauth/account/verified_email_required.html
+++ b/donofy/templates/allauth/account/verified_email_required.html
@@ -4,20 +4,26 @@
 
 {% block head_title %}{% trans "Verify Your Email Address" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Verify Your Email Address" %}</h1>
+{% block inner_content %}
 
-{% url 'account_email' as email_url %}
+    <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="text-pink bold">{% trans "Verify Your Email Address" %}</h1>
 
-<p>{% blocktrans %}This part of the site requires us to verify that
-you are who you claim to be. For this purpose, we require that you
-verify ownership of your email address. {% endblocktrans %}</p>
+                {% url 'account_email' as email_url %}
 
-<p>{% blocktrans %}We have sent an email to you for
-verification. Please click on the link inside that email. If you do not see the verification email in your main inbox, check your spam folder. Otherwise
-contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+                <p>{% blocktrans %}This part of the site requires us to verify that
+                you are who you claim to be. For this purpose, we require that you
+                verify ownership of your email address. {% endblocktrans %}</p>
 
-<p>{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your email address</a>.{% endblocktrans %}</p>
+                <p>{% blocktrans %}We have sent an email to you for
+                verification. Please click on the link inside that email. If you do not see the verification email in your main inbox, check your spam folder. Otherwise
+                contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
 
+                <p>{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}" class="a-pink">change your email address</a>.{% endblocktrans %}</p>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
